View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023951 | Community | OCCT:Data Exchange | public | 2013-05-08 17:21 | 2015-02-07 08:42 |
Reporter | Pawel | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0023951: Visibility of free, simple shapes not saved when writing XCAF Document into STEP | ||||
Description | I'm not sure if this effect occurs by design or not bur I noticed that when saving a simple free shape that is invisible into STEP file using STEPCAFControl_Writer the (in)visibility status is not set. | ||||
Steps To Reproduce | //test_box.step TDF_Label lab1 = XCAFDoc_DocumentTool::ShapeTool (aDoc->Main ())->NewShape(); XCAFDoc_DocumentTool::ShapeTool (aDoc->Main ())->SetShape(lab1, s1); TDataStd_Name::Set(lab1, "Box1"); Quantity_Color yellow(1,1,0, Quantity_TOC_RGB); XCAFDoc_DocumentTool::ColorTool (aDoc->Main())->SetColor(lab1, yellow, XCAFDoc_ColorGen); XCAFDoc_DocumentTool::ColorTool(aDoc->Main())->SetVisibility(lab1, 0); STEPControl_StepModelType mode = STEPControl_AsIs; STEPCAFControl_Writer writer; if ( ! writer.Transfer (aDoc, mode ) ) { cout<<"The document cannot be translated or gives no result."<<endl; return; } IFSelect_ReturnStatus stat = writer.Write("test_box.step"); | ||||
Tags | No tags attached. | ||||
Test case number | bugs xde bug23951 | ||||
|
test_box.step (17,124 bytes) |
|
QA command OCC23951 was added to QABugs_19.cxx |
|
Delete check for top-level shape during writing invisibility property. Branch CR23951 is ready to be reviewed. Dear GKA, Please review. |
|
Branch CR23951 is ready to be tested. |
|
Dear BugMaster, Branch CR23951 (and products from GIT master) was compiled on Linux, Windows and MacOS platforms and tested. SHA-1: e628003fa5c31526337504624dff667abd19ef2f Number of compiler warnings: occt component : Linux: 17 (17 on master) Windows: 0 (0 on master) MacOS: 202 (205 on master) products component : Linux: 11 (11 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions Testing cases: I added QA command OCC23951 (step to reproduce) to src/QABugs/QABugs_19.cxx, it compiles successfully, but crashes in Draw. Could you please review it. Testing on Linux: Total MEMORY difference: 359360664 / 359725188 Total CPU difference: 51412.86000000007 / 51526.670000000115 Testing on Windows: Total MEMORY difference: 382006404 / 382720164 Total CPU difference: 36923.140625 / 39033.953125 There are no differences in images found by testdiff. |
|
Dear APN, The problem was fixed by initializing document and shape. Branch CR23951 was updated. |
|
Dear BugMaster, Branch CR23951 (and products from GIT master) was compiled on Linux, Windows and MacOS platforms and tested. SHA-1: 0516c80b55df8a50868adf3dad20947776b8a9f9 Number of compiler warnings: occt component : Linux: 17 (17 on master) Windows: 0 (0 on master) MacOS: 202 (205 on master) products component : Linux: 11 (11 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions Testing cases: bugs xde bug23951 - OK http://occt-tests/CR23951-master-occt/Debian60-64/bugs/xde/bug23951.html Testing on Linux: Total MEMORY difference: 359501580 / 359742796 Total CPU difference: 52244.45999999983 / 51526.670000000115 Testing on Windows: Total MEMORY difference: 381882788 / 382651592 Total CPU difference: 42782.984375 / 37486.484375 There are no differences in images found by testdiff. |
occt: master 574d7236 2014-05-29 12:14:45
Committer: apn Details Diff |
0023951: Visibility of free, simple shapes not saved when writing XCAF Document into STEP Delete check for top-level shape during writing invisibility property. Added QA command OCC23951. Fix crash in QA command OCC23951: initialize document, initialize shape. Added test case bugs/xde/bug23951 Modified QABugs/QABugs_19.cxx to avoid warnings |
Affected Issues 0023951 |
|
mod - src/QABugs/QABugs_19.cxx | Diff File | ||
mod - src/STEPCAFControl/STEPCAFControl_Writer.cxx | Diff File | ||
add - tests/bugs/xde/bug23951 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-05-08 17:21 | Pawel | New Issue | |
2013-05-08 17:21 | Pawel | Assigned To | => gka |
2013-05-08 17:21 | Pawel | File Added: test_box.step | |
2013-05-08 17:21 | Pawel | Relationship added | related to 0023950 |
2013-12-21 10:13 | abv | Target Version | 6.7.0 => 6.7.1 |
2014-03-25 16:22 | apn | Note Added: 0028471 | |
2014-04-04 18:09 | abv | Target Version | 6.7.1 => 6.8.0 |
2014-04-15 10:39 | gka | Assigned To | gka => ika |
2014-04-15 10:39 | gka | Status | new => assigned |
2014-05-21 11:09 |
|
Note Added: 0029427 | |
2014-05-21 11:09 |
|
Assigned To | ika => gka |
2014-05-21 11:09 |
|
Status | assigned => resolved |
2014-05-21 11:16 | gka | Note Added: 0029428 | |
2014-05-21 11:16 | gka | Status | resolved => reviewed |
2014-05-22 11:11 | bugmaster | Assigned To | gka => apn |
2014-05-27 11:04 | apn | Note Added: 0029532 | |
2014-05-27 11:04 | apn | Assigned To | apn => ika |
2014-05-27 11:04 | apn | Status | reviewed => assigned |
2014-05-27 15:01 |
|
Note Added: 0029546 | |
2014-05-27 15:01 |
|
Assigned To | ika => apn |
2014-05-27 15:01 |
|
Status | assigned => feedback |
2014-05-28 09:53 | apn | Status | feedback => reviewed |
2014-05-28 16:00 | apn | Note Added: 0029578 | |
2014-05-28 16:01 | apn | Test case number | => bugs xde bug23951 |
2014-05-28 16:01 | apn | Assigned To | apn => bugmaster |
2014-05-28 16:01 | apn | Status | reviewed => tested |
2014-05-30 12:59 | apn | Changeset attached | => occt master 574d7236 |
2014-05-30 12:59 | apn | Assigned To | bugmaster => apn |
2014-05-30 12:59 | apn | Status | tested => verified |
2014-05-30 12:59 | apn | Resolution | open => fixed |
2014-11-11 12:46 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:52 |
|
Status | verified => closed |
2015-02-07 08:42 | abv | Relationship added | related to 0025803 |